--- a/Castlin/requirements.txt
+++ b/Castlin/requirements.txt
@@ -5,6 +5,7 @@ matplotlib==3.3.1
 mysqlclient==2.0.1
 numpy==1.19.1
 Pillow==7.2.0
+psycopg2==2.8.5
 pyparsing==2.4.7
 python-dateutil==2.8.1
 whitenoise==5.2.0
